--- a/intavcore/profiles/desarrollo/cacheintav.properties
+++ b/intavcore/profiles/desarrollo/cacheintav.properties
@@ -3,7 +3,7 @@
 # Par\u00E1metros de la cach\u00E9
 cache.memory = false
 cache.persistence.class = com.opensymphony.oscache.plugins.diskpersistence.DiskPersistenceListener
-cache.path = ${files.path}/cache/
+cache.path = ${files.path}/cache
 cache.refresh.days = 365
 
 cache.capacity = 1000
