--- a/intavcore/src/test/resources/intav.properties
+++ b/intavcore/src/test/resources/intav.properties
@@ -122,7 +122,7 @@ broken.links.allowed.ports = -1;80;443
 #HTML-XHTML DOCTYPE
 
 html.doctype = <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-xhtml.doctype =<\!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http\://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+xhtml.doctype =<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 # Timeout para descargar los gifs
 gif.connection.timeout = 10000
