--- a/portal/profiles/integracion/log4j.properties
+++ b/portal/profiles/integracion/log4j.properties
@@ -1,6 +1,6 @@
-log4j.rootLogger=ERROR, rastreador, console
-log4j.logger.es.inteco.crawler.job.CrawlerJob=INFO, crawler
-log4j.logger.es.inteco.rastreador2.management=INFO, management
+log4j.rootLogger=ERROR, rastreador
+log4j.logger.es.inteco.crawler.job.CrawlerJob=ERROR, crawler
+log4j.logger.es.inteco.rastreador2.management=ERROR, management
 
 log4j.appender.rastreador=org.apache.log4j.RollingFileAppender
 log4j.appender.rastreador.File= ${catalina.base}/logs/rastreador.log
@@ -8,7 +8,7 @@ log4j.appender.rastreador.MaxFileSize=10240KB
 log4j.appender.rastreador.Append=true
 log4j.appender.rastreador.layout=org.apache.log4j.PatternLayout
 log4j.appender.rastreador.layout.ConversionPattern=%d %p [%c] - %m %n
-log4j.appender.rastreador.MaxBackupIndex=10
+log4j.appender.rastreador.MaxBackupIndex=5
 
 log4j.appender.crawler=org.apache.log4j.RollingFileAppender
 log4j.appender.crawler.File= ${catalina.base}/logs/crawler.log
@@ -16,7 +16,7 @@ log4j.appender.crawler.MaxFileSize=10240KB
 log4j.appender.crawler.Append=true
 log4j.appender.crawler.layout=org.apache.log4j.PatternLayout
 log4j.appender.crawler.layout.ConversionPattern=%d %p [%c] - %m %n
-log4j.appender.crawler.MaxBackupIndex=10
+log4j.appender.crawler.MaxBackupIndex=5
 
 log4j.appender.management=org.apache.log4j.RollingFileAppender
 log4j.appender.management.File= ${catalina.base}/logs/management.log
@@ -24,7 +24,7 @@ log4j.appender.management.MaxFileSize=10240KB
 log4j.appender.management.Append=true
 log4j.appender.management.layout=org.apache.log4j.PatternLayout
 log4j.appender.management.layout.ConversionPattern=%d %p [%c] - %m %n
-log4j.appender.management.MaxBackupIndex=10
+log4j.appender.management.MaxBackupIndex=5
 
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
