--- a/oaw/pom.xml
+++ b/oaw/pom.xml
@@ -59,7 +59,7 @@
             <properties>
                 <profile.name>desarrollo</profile.name>
                 <deploy.path>/home/mikunis/programas/apache-tomcat-7.0.54/webapps/oaw</deploy.path>
-                <files.path>/home/mikunis/files</files.path>
+                <files.path>/tmp/oaw/files</files.path>
             </properties>
         </profile>
         <profile>
@@ -67,7 +67,7 @@
             <properties>
                 <profile.name>integracion</profile.name>
                 <deploy.path>/opt/apache-tomcat-7.0.54/webapps/oaw</deploy.path>
-                <files.path>/root/oaw/files</files.path>
+                <files.path>/tmp/oaw/files</files.path>
             </properties>
         </profile>
     </profiles>
