--- a/portal/profiles/integracion/crawler.properties
+++ b/portal/profiles/integracion/crawler.properties
@@ -157,7 +157,7 @@ num.max.bar.graph = 4
 scheduled.crawlings.user.name = Programado
 
 # Gesti\u00F3n de certificados digitales
-digital.certificates.path = /usr/share/tomcat5.5/files/ssl/cacerts
+digital.certificates.path = ${files.path}/ssl/cacerts
 digital.certificates.storepass = changeit
 
 # Lista de fragmentos de URIs separados por punto y coma que no se analizar\u00E1n por el filtro de seguridad
@@ -166,7 +166,7 @@ break.characters.table.string = 30
 break.characters.table.string.multilang = 40
 
 debug.checks = false
-debug.checks.file = /usr/share/tomcat5.5/files/debug_checks.csv
+debug.checks.file = ${files.path}/debug/debug_checks.csv
 
 # Par\u00E1metros del servicio b\u00E1sico
 basic.service.url = http://localhost:8080/oaw/basicServiceAction.do
@@ -183,7 +183,7 @@ basic.service.title.max.length = 80
 basic.service.title.doc.max.length = 150
 basic.service.title.alternative = C\u00F3digo fuente
 
-hibernate.cfg.file.export.database = ${deploy.path}/WEB-INF/classes/export.database.hibernate.cfg.xml
+hibernate.cfg.file.export.database = export.database.hibernate.cfg.xml
 verification.id.reg.exp = (\\d\\.\\d\\.\\d)
 
 # Exportaci\u00F3n de anexos
