--- a/portal/profiles/integracion/pdf.properties
+++ b/portal/profiles/integracion/pdf.properties
@@ -8,7 +8,7 @@ pdf.file.lenox.name = informe_lenox.pdf
 name.table.line.image = lineaVerdeMP.png
 name.table.line.roja.image = lineaRoja.png
 
-path.pdf.font = ${files.path}/fonts/arial.ttf
+path.pdf.font = ${deploy.path}/WEB-INF/fonts/arial.ttf
 
 path.grafico.rastreo = ${deploy.path}/images/grafico_rastreo.png
 path.inteco.logo = ${deploy.path}/images/logo_inteco2.png
