Mas ajustes despliegue v1.0

--- a/crawler/profiles/integracion/crawler.core.properties
+++ b/crawler/profiles/integracion/crawler.core.properties
@@ -1,14 +1,13 @@
-check.accessibility.default.entity = Inteco
-check.accessibility.default.guideline = wcag-1-0
-check.accessibility.default.level = aa
-check.accessibility.default.language = es
-
 # Par\u00E1metros para el servidor de correo
 mail.transport.protocol = smtp
 mail.smtp.host =
-mail.address.from = intav@inteco.es
-mail.address.from.name = Inteco Accessibility Validator
-mail.message.subject = Rastreador Web INTECO
+mail.smtp.port=
+mail.smtp.sslport=
+mail.smtp.user =
+mail.smtp.pass =
+mail.address.from =
+mail.address.from.name = MINHAP Validador Accesibilidad
+mail.message.subject = Rastreador Web MINHAP
 error.mail.message = Se ha producido un error en el rastreo efectuado el d\u00EDa {0} para la entidad {1} por el Rastreador Web de Inteco. Se han rastreado los dominios {2}
 mail.message = Informe del rastreo efectuado el d\u00EDa {0} para la entidad {1} por el Rastreador Web de Inteco. Se han rastreado los dominios {2}
 
@@ -57,3 +56,8 @@ max.num.descendants.to.serialize = 500
 
 #Puede haber m\u00E1s de una direcci\u00F3n de correo electronico separadas por ';'
 incomplete.crawler.warning.emails = miguel.garcia@fundacionctic.org
+
+check.accessibility.default.entity = Inteco
+check.accessibility.default.guideline = wcag-1-0
+check.accessibility.default.level = aa
+check.accessibility.default.language = es
