--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -44,16 +44,16 @@
                     hay que usar ruta absoluta (usando la variable ${basedir}) -->
                 <targetPath>${basedir}/target/oaw/META-INF</targetPath>
             </resource>
-            <resource>
-                <directory>profiles/${profile.name}</directory>
-                <includes>
-                    <include>tiles-defs.xml</include>
-                </includes>
-                <filtering>true</filtering>
-                <!-- Como intentamos copiar el fichero a una ruta padre del directorio classes (raiz de resources)
-                    hay que usar ruta absoluta (usando la variable ${basedir}) -->
-                <targetPath>${basedir}/target/oaw/WEB-INF</targetPath>
-            </resource>
+            <!--<resource>-->
+                <!--<directory>profiles/${profile.name}</directory>-->
+                <!--<includes>-->
+                    <!--<include>tiles-defs.xml</include>-->
+                <!--</includes>-->
+                <!--<filtering>true</filtering>-->
+                <!--&lt;!&ndash; Como intentamos copiar el fichero a una ruta padre del directorio classes (raiz de resources)-->
+                    <!--hay que usar ruta absoluta (usando la variable ${basedir}) &ndash;&gt;-->
+                <!--<targetPath>${basedir}/target/oaw/WEB-INF</targetPath>-->
+            <!--</resource>-->
         </resources>
     </build>
 
