--- a/portal/profiles/desarrollo/crawler.core.properties
+++ b/portal/profiles/desarrollo/crawler.core.properties
@@ -9,8 +9,8 @@ mail.smtp.pass =
 mail.address.from = miguel.garcia@fundacionctic.org
 mail.address.from.name = MINHAP Validador Accesibilidad
 mail.message.subject = Rastreador Web MINHAP
-error.mail.message = Se ha producido un error en el rastreo efectuado el d\u00EDa {0} para la entidad {1} por el Rastreador Web de Inteco. Se han rastreado los dominios {2}
-mail.message = Informe del rastreo efectuado el d\u00EDa {0} para la entidad {1} por el Rastreador Web de Inteco. Se han rastreado los dominios {2}
+error.mail.message = Se ha producido un error en el rastreo efectuado el d\u00EDa {0} para la entidad {1} por el Rastreador Web de MINHAP. Se han rastreado los dominios {2}
+mail.message = Informe del rastreo efectuado el d\u00EDa {0} para la entidad {1} por el Rastreador Web de MINHAP. Se han rastreado los dominios {2}
 
 # URL de generaci\u00F3n del informe pdf
 pdf.url.export = http://localhost:8080/oaw/secure/exportAction.do?id={0}&idrastreo={1}&key={2}&exportType=intavPDF
