--- a/portal/profiles/desarrollo/crawler.properties
+++ b/portal/profiles/desarrollo/crawler.properties
@@ -2,11 +2,12 @@
 application.root = /oaw
 
 # DataSources
-datasource.name.system = jdbc/crawler_sistema
-datasource.name.lenox = jdbc/lenox2
-datasource.name.intav = jdbc/intav
-datasource.name.multilanguage = jdbc/multilanguage
-datasource.name.malware = jdbc/malware
+datasource.name = jdbc/oaw
+datasource.name.system = jdbc/oaw
+datasource.name.lenox = jdbc/oaw
+datasource.name.intav = jdbc/oaw
+datasource.name.multilanguage = jdbc/oaw
+datasource.name.malware = jdbc/oaw
 
 alert.from.address = miguel.garcia@fundacionctic.org
 alert.from.name = Rastreador Web
@@ -60,9 +61,9 @@ numRastreos.max = 10
 xml.file.max.size = 500000
 
 export.open.office.graphic.noResults = ${deploy.path}/WEB-INF/templatesODT/NoResult.jpg
-export.open.office.template.une.2004.CCAA = ${deploy.path}/WEB-INF/templatesODT/Plantilla_CCAA.odt
-export.open.office.template.une.2004.AGE = ${deploy.path}/WEB-INF/templatesODT/Plantilla_AGE.odt
-export.open.office.template.une.2004.EELL = ${deploy.path}/WEB-INF/templatesODT/Plantilla_EELL.odt
+export.open.office.template.une.2004.CCAA = ${deploy.path}/WEB-INF/templatesODT/observatorio_ccaa_2004_blank.odt
+export.open.office.template.une.2004.AGE = ${deploy.path}/WEB-INF/templatesODT/observatorio_age_2004_blank.odt
+export.open.office.template.une.2004.EELL = ${deploy.path}/WEB-INF/templatesODT/observatorio_eell_2004_blank.odt
 export.open.office.template.une.2012.CCAA = ${deploy.path}/WEB-INF/templatesODT/Plantilla_CCAA_UNE_2012_embed.odt
 export.open.office.template.une.2012.AGE = ${deploy.path}/WEB-INF/templatesODT/Plantilla_AGE_UNE_2012_embed.odt
 export.open.office.template.une.2012.EELL = ${deploy.path}/WEB-INF/templatesODT/Plantilla_EELL_UNE_2012.odt
@@ -181,10 +182,10 @@ basic.service.max.num.concurrent.users = 5
 basic.service.num.retries.check.concurrence = 200
 basic.service.time.retry.check.concurrence = 20000
 basic.service.timeout = 1800000
-basic.service.address = rastreador@inteco.es
+basic.service.address = miguel.garcia@fundacionctic.org
 basic.service.name = Servicio on-line de diagn\u00F3stico de Accesibilidad
 basic.service.reply.to.mail = miguel.garcia@fundacionctic.org
-basic.service.reply.to.name = Miguel Garc\u00EDa
+basic.service.reply.to.name = Observatorio de accesibilidad
 basic.service.title.max.length = 80
 basic.service.title.doc.max.length = 150
 basic.service.title.alternative = C\u00F3digo fuente
