--- a/portal/profiles/desarrollo/pdf.properties
+++ b/portal/profiles/desarrollo/pdf.properties
@@ -15,7 +15,7 @@ path.inteco.logo = ${deploy.path}/images/logo_inteco2.png
 path.inteco.logoH = ${deploy.path}/images/logo_inteco.png
 path.observatorio.logo = ${deploy.path}/images/observatorio_accesibilidad_logo.png
 path.observatorio.multilanguage.logo = ${deploy.path}/images/observatorio_multi_logo.png
-path.ministerio.logo = ${deploy.path}/images/MPOLTERR_Y_ADPUB.gif
+path.ministerio.logo = ${deploy.path}/images/escudo.png
 path.images = ${deploy.path}/images/
 path.problem =  ${deploy.path}/images/problema.gif
 path.warnings =  ${deploy.path}/images/advertencia.gif
