--- a/portal/profiles/integracion/crawler.properties
+++ b/portal/profiles/integracion/crawler.properties
@@ -2,11 +2,12 @@
 application.root = /oaw
 
 # DataSources
-datasource.name.system = jdbc/crawler_sistema
-datasource.name.lenox = jdbc/lenox2
-datasource.name.intav = jdbc/intav
-datasource.name.multilanguage = jdbc/multilanguage
-datasource.name.malware = jdbc/malware
+datasource.name = jdbc/oaw
+datasource.name.system = jdbc/oaw
+datasource.name.lenox = jdbc/oaw
+datasource.name.intav = jdbc/oaw
+datasource.name.multilanguage = jdbc/oaw
+datasource.name.malware = jdbc/oaw
 
 alert.from.address = observ.accesibilidad@premdm.mpt.es
 alert.from.name = Rastreador Web
@@ -48,6 +49,7 @@ cartridge.wcag2.intav.id = 3
 cartridge.observatorio.intav.id = 4
 cartridge.une.intav.aux.id = 5
 cartridge.wcag1.intav.aux.id = 6
+cartridge.une2012.intav.id = 7
 
 profundidadMax.rastreo = 20
 numHilosMax.rastreo = 20
@@ -59,15 +61,13 @@ numRastreos.max = 10
 xml.file.max.size = 500000
 
 export.open.office.graphic.noResults = ${deploy.path}/WEB-INF/templatesODT/NoResult.jpg
-export.open.office.template.CCAA = ${deploy.path}/WEB-INF/templatesODT/Plantilla_CCAA.odt
-export.open.office.template.AGE = ${deploy.path}/WEB-INF/templatesODT/Plantilla_AGE.odt
-export.open.office.template.EELL = ${deploy.path}/WEB-INF/templatesODT/Plantilla_EELL.odt
-export.open.office.template.une.2004.CCAA = ${deploy.path}/WEB-INF/templatesODT/Plantilla_CCAA.odt
-export.open.office.template.une.2004.AGE = ${deploy.path}/WEB-INF/templatesODT/Plantilla_AGE.odt
+export.open.office.template.une.2004.CCAA = ${deploy.path}/WEB-INF/templatesODT/observatorio_ccaa_2004_blank.odt
+export.open.office.template.une.2004.AGE = ${deploy.path}/WEB-INF/templatesODT/observatorio_age_2004_blank.odt
 export.open.office.template.une.2004.EELL = ${deploy.path}/WEB-INF/templatesODT/Plantilla_EELL.odt
-export.open.office.template.une.2012.CCAA = ${deploy.path}/WEB-INF/templatesODT/Plantilla_CCAA_UNE_2012.odt
-export.open.office.template.une.2012.AGE = ${deploy.path}/WEB-INF/templatesODT/Plantilla_AGE_UNE_2012.odt
+export.open.office.template.une.2012.CCAA = ${deploy.path}/WEB-INF/templatesODT/Plantilla_CCAA_UNE_2012_embed.odt
+export.open.office.template.une.2012.AGE = ${deploy.path}/WEB-INF/templatesODT/Plantilla_AGE_UNE_2012_embed.odt
 export.open.office.template.une.2012.EELL = ${deploy.path}/WEB-INF/templatesODT/Plantilla_EELL_UNE_2012.odt
+
 export.open.office = ${files.path}/exports/openOffice/
 
 conclusion.path = ${deploy.path}/WEB-INF/conclusion_xml/
