--- a/portal/profiles/mail.properties
+++ b/portal/profiles/mail.properties
@@ -7,7 +7,7 @@ mail.smtp.tls=false
 mail.smtp.user=observ.accesibilidad@premdm.mpt.es
 mail.smtp.pass=5noviembre2014
 mail.address.from =observ.accesibilidad@premdm.mpt.es
-mail.address.from.name = MINHAP Validador Accesibilidad
+mail.address.from.name = Observatorio de accesibilidad
 mail.message.subject = Rastreador Web MINHAP
 error.mail.message = Se ha producido un error en el rastreo efectuado el d\u00EDa {0} para la entidad {1} por el Rastreador Web de MINHAP. Se han rastreado los dominios {2}
 mail.message = Informe del rastreo efectuado el d\u00EDa {0} para la entidad {1} por el Rastreador Web de MINHAP. Se han rastreado los dominios {2}
