--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -3054,6 +3054,8 @@ check.460.error = Cambios de idioma sin especificar.
 check.460.rationale = <p>Cuando en el contenido de la p\u00E1gina se produzca alg\u00FAn cambio de idioma se debe identificar dicho cambio de idioma con el atributo <code>lang</code> empleando un c\u00F3digo de idioma v\u00E1lido seg\u00FAn la lista de lenguajes que proporciona la Agencia de Asignaci\u00F3n de N\u00FAmeros de Internet (IANA). Los lectores de pantalla usar\u00E1n esta informaci\u00F3n para utilizar la pronunciaci\u00F3n y entonaci\u00F3n adecuada al leer el contenido.</p>
 check.461.error = Etiquetas de formulario ocultas visualmente.
 check.461.rationale = <p>Las etiquetas <code>LABEL</code> de los campos de formulario no pueden estar ocultas visualmente si no existe otro mecanismo para indicar la funci\u00F3n del campo como, por ejemplo, el t\u00EDtulo del mismo (<code>title</code>). Todos los usuarios deben poder acceder a esta informaci\u00F3n, incluyendo los los usuarios de navegadores gr\u00E1ficos.</p>
+check.462.error = T\u00EDtulos repetidos en la muestra.
+check.462.rationale = <p>Deben proporcionarse t\u00EDtulos (etiquetas <code>TITLE</code>) adecuados a las p\u00E1ginas web para que sirvan de orientaci\u00F3n dentro de la navegaci\u00F3n del portal.</p>
 
 multilanguage.detail.title = Resultados del an\u00E1lisis de Multilig\u00FCismo
 multilanguage.detail.caption = Lista de lenguajes encontrados
