--- a/intavcore/src/test/resources/tika.language.override.properties
+++ b/intavcore/src/test/resources/tika.language.override.properties
@@ -15,7 +15,7 @@
 #  limitations under the License.
 #
 # This is a tika LanguageIdentifier properties file.
-# Its name is org/apache/tika/language/tika.language.properties
+# Its name is org/apache/tika/language/tika.language.override.properties
 # You can override it by placing a copy on the classpath in a file called
 # org/apache/tika/language/tika.language.override.properties
 
