--- a/portal/src/test/resources/crawler.core.properties
+++ b/portal/src/test/resources/crawler.core.properties
@@ -29,9 +29,9 @@ link.chars.max.length = 499
 
 amplitud.ilimitada.value = 0
 
-method.accept.header = text/html
+method.accept.header = text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8
 method.accept.language.header = es,en;q=0.8,es-es;q=0.5,en-us;q=0.3
-method.user.agent.header = Mozilla/5.0 (Windows; U; Windows NT 5.1; es-ES; rv\:1.9.1.3) Gecko/20090915 Firefox/3.5.3 (.NET CLR 3.5.30729) 
+method.user.agent.header = Mozilla/5.0 (Windows NT 6.3; rv:36.0) Gecko/20100101 Firefox/36.0
 
 http.proxy.active = false
 http.proxy.host = 172.23.50.61
