--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -3,19 +3,19 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>portal</artifactId>
-    <version>2.0.1</version>
+    <version>2.0.2</version>
     <packaging>war</packaging>
 
     <name>oaw-portal</name>
 
     <properties>
-          <oaw.version>2.0.1</oaw.version>
+          <oaw.version>2.0.2</oaw.version>
     </properties>
 
     <parent>
         <groupId>es.minhap.oaw</groupId>
         <artifactId>oaw</artifactId>
-        <version>2.0.1</version>
+        <version>2.0.2</version>
         <relativePath>../oaw/pom.xml</relativePath>
     </parent>
 
@@ -29,7 +29,7 @@
                     <include>*</include>
                     <include>checks/*</include>
                     <include>guidelines/*</include>
-                    <include>languages/*</include>
+                    <include>languages/**</include>
                 </includes>
             </resource>
             <resource>
