--- a/portal/profiles/integracion/log4j.properties
+++ b/portal/profiles/integracion/log4j.properties
@@ -1,7 +1,8 @@
-log4j.rootLogger=INFO, console, rastreador
+log4j.rootLogger=WARN, console, rastreador
 log4j.logger.es.inteco.crawler.job.CrawlerJob=INFO, crawler
 log4j.logger.es.inteco.rastreador2.management=INFO, management
 log4j.logger.cz.vutbr.web.csskit=ERROR, console
+log4j.com.helger.css.handler.LoggingCSSParseExceptionHandler=FATAL, console
 
 log4j.appender.rastreador=org.apache.log4j.RollingFileAppender
 log4j.appender.rastreador.File= ${catalina.base}/logs/rastreador.log
