--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -3061,6 +3061,8 @@ check.462.error = Las p\u00E1ginas analizadas en el muestreo presentan todas el 
 check.462.rationale = <p>Deben proporcionarse t\u00EDtulos (etiquetas <code>TITLE</code>) adecuados a las p\u00E1ginas web para que sirvan de orientaci\u00F3n dentro de la navegaci\u00F3n del portal.</p>
 check.463.error = La Declaraci\u00F3n de Accesibilidad del portal carece del nivel de accesibilidad alcanzado.
 check.463.rationale = <p>La Declaraci\u00F3n de Accesibilidad del portal debe indicar el nivel de accesibilidad alcanzado as\u00ED como cualquier caracter\u00EDstica particular del portal que afecte a su accesibilidad</p>
+check.464.error = Se han encontrado encabezados que se usan para indicar el t\u00EDtulo de tablas
+check.464.rationale = <p>Use el elemento <code>CAPTION</code> para indicar el t\u00EDtulo de tablas de datos en vez de encabezados adyacentes</p>
 
 multilanguage.detail.title = Resultados del an\u00E1lisis de Multilig\u00FCismo
 multilanguage.detail.caption = Lista de lenguajes encontrados
