Informes individuales finales

--- a/portal/profiles/desarrollo/crawler.properties
+++ b/portal/profiles/desarrollo/crawler.properties
@@ -2,11 +2,12 @@
 application.root = /oaw
 
 # DataSources
-datasource.name.system = jdbc/crawler_sistema
-datasource.name.lenox = jdbc/lenox2
-datasource.name.intav = jdbc/intav
-datasource.name.multilanguage = jdbc/multilanguage
-datasource.name.malware = jdbc/malware
+datasource.name = jdbc/oaw
+datasource.name.system = jdbc/oaw
+datasource.name.lenox = jdbc/oaw
+datasource.name.intav = jdbc/oaw
+datasource.name.multilanguage = jdbc/oaw
+datasource.name.malware = jdbc/oaw
 
 alert.from.address = miguel.garcia@fundacionctic.org
 alert.from.name = Rastreador Web
@@ -40,6 +41,7 @@ cartridge.malware.id = 1
 cartridge.lenox.id = 2
 cartridge.intav.id = 3
 cartridge.multilanguage.id = 4
+cartridge.une2012.id = 5
 
 cartridge.une.intav.id = 1
 cartridge.wcag1.intav.id = 2
@@ -47,6 +49,7 @@ cartridge.wcag2.intav.id = 3
 cartridge.observatorio.intav.id = 4
 cartridge.une.intav.aux.id = 5
 cartridge.wcag1.intav.aux.id = 6
+cartridge.une2012.intav.id = 7
 
 profundidadMax.rastreo = 20
 numHilosMax.rastreo = 20
@@ -58,9 +61,13 @@ numRastreos.max = 10
 xml.file.max.size = 500000
 
 export.open.office.graphic.noResults = ${deploy.path}/WEB-INF/templatesODT/NoResult.jpg
-export.open.office.template.CCAA = ${deploy.path}/WEB-INF/templatesODT/Plantilla_CCAA.odt
-export.open.office.template.AGE = ${deploy.path}/WEB-INF/templatesODT/Plantilla_AGE.odt
-export.open.office.template.EELL = ${deploy.path}/WEB-INF/templatesODT/Plantilla_EELL.odt
+export.open.office.template.une.2004.CCAA = ${deploy.path}/WEB-INF/templatesODT/observatorio_ccaa_2004_blank.odt
+export.open.office.template.une.2004.AGE = ${deploy.path}/WEB-INF/templatesODT/observatorio_age_2004_blank.odt
+export.open.office.template.une.2004.EELL = ${deploy.path}/WEB-INF/templatesODT/observatorio_eell_2004_blank.odt
+export.open.office.template.une.2012.CCAA = ${deploy.path}/WEB-INF/templatesODT/Plantilla_CCAA_UNE_2012_embed.odt
+export.open.office.template.une.2012.AGE = ${deploy.path}/WEB-INF/templatesODT/Plantilla_AGE_UNE_2012_embed.odt
+export.open.office.template.une.2012.EELL = ${deploy.path}/WEB-INF/templatesODT/Plantilla_EELL_UNE_2012.odt
+
 export.open.office = ${files.path}/exports/openOffice/
 
 conclusion.path = ${deploy.path}/WEB-INF/conclusion_xml/
@@ -156,10 +163,6 @@ num.max.bar.graph = 4
 
 scheduled.crawlings.user.name = Programado
 
-# Gesti\u00F3n de certificados digitales
-digital.certificates.path = ${files.path}/ssl/cacerts
-digital.certificates.storepass = changeit
-
 # Lista de fragmentos de URIs separados por punto y coma que no se analizar\u00E1n por el filtro de seguridad
 not.filtered.uris = exportAction.do;basicServiceAction.do;primaryExportPdfAction.do;anonymousHTMLAction.do;multilanguagePrimaryExportPdfAction.do
 break.characters.table.string = 30
@@ -171,19 +174,14 @@ debug.checks.file = ${files.path}/debug/debug_checks.csv
 # Par\u00E1metros del servicio b\u00E1sico
 basic.service.url = http://localhost:8080/oaw/basicServiceAction.do
 basic.service.post.request = url={0}&correo={1}&profundidad={2}&amplitud={3}&informe={4}&usuario={5}&action={6}&id={7}&content={8}&inDirectory={9}
-basic.service.max.num.concurrent.users = 5
+basic.service.max.num.concurrent.users = 8
 basic.service.num.retries.check.concurrence = 200
 basic.service.time.retry.check.concurrence = 20000
-basic.service.timeout = 1800000
-basic.service.address = rastreador@inteco.es
-basic.service.name = Servicio on-line de diagn\u00F3stico de Accesibilidad
-basic.service.reply.to.mail = miguel.garcia@fundacionctic.org
-basic.service.reply.to.name = Miguel Garc\u00EDa
 basic.service.title.max.length = 80
 basic.service.title.doc.max.length = 150
 basic.service.title.alternative = C\u00F3digo fuente
 
-hibernate.cfg.file.export.database = export.database.hibernate.cfg.xml
+hibernate.cfg.file.export.database = ${deploy.path}/WEB-INF/classes/export.database.hibernate.cfg.xml
 verification.id.reg.exp = (\\d\\.\\d\\.\\d)
 
 # Exportaci\u00F3n de anexos
