--- a/portal/profiles/desarrollo/pdf.properties
+++ b/portal/profiles/desarrollo/pdf.properties
@@ -9,6 +9,7 @@ name.table.line.image = lineaVerdeMP.png
 name.table.line.roja.image = lineaRoja.png
 
 path.pdf.font = ${deploy.path}/WEB-INF/fonts/arial.ttf
+path.pdf.font.monospaced = ${deploy.path}/WEB-INF/fonts/roboto-regular.ttf
 
 path.grafico.rastreo = ${deploy.path}/images/grafico_rastreo.png
 path.inteco.logo = ${deploy.path}/images/logo_inteco2.png
@@ -22,6 +23,9 @@ path.warnings =  ${deploy.path}/images/advertencia.gif
 path.infos =  ${deploy.path}/images/observacion.gif
 path.mode.green = ${deploy.path}/images/modalidadVerde.png
 path.mode.red = ${deploy.path}/images/modalidadRojo.png
+path.evolution.increase = ${deploy.path}/img/up.png
+path.evolution.decrease = ${deploy.path}/img/down.png
+path.evolution.same = ${deploy.path}/img/horizontal.png
 path.lenox.pdf.list =  ${deploy.path}/images/bullet_lista.gif
 path.observatory.aa.level = ${deploy.path}/images/aa_validation.png
 path.observatory.a.level = ${deploy.path}/images/a_validation.png
