--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -630,11 +630,12 @@ resultados.primarios.43.p1.anchor = PMP
 resultados.primarios.43.p2 = En el eje X de la gr\u00E1fica se muestran las p\u00E1ginas analizadas en el portal, mientras que el Eje Y representa la puntuaci\u00F3n obtenida por cada una de ellas. Adem\u00E1s, la barra de puntuaci\u00F3n de cada p\u00E1gina indica mediante el c\u00F3digo de color Rojo - Amarillo - Verde, el grado de adecuaci\u00F3n obtenido (No V\u00E1lido, Prioridad 1, Prioridad 1 y 2).
 
 resultados.primarios.5.p1 = A continuaci\u00F3n se presenta el resultado de la aplicaci\u00F3n de las verificaciones que componen la metodolog\u00EDa del Observatorio sobre cada p\u00E1gina de la muestra. En las siguientes tablas se muestra para cada una de dichas comprobaciones, el resultado de Valor y Modalidad obtenido por cada p\u00E1gina analizada. 
-resultados.primarios.5.p2 = Por lo tanto de forma r\u00E1pida y visual se puede ver para una determinada verificaci\u00F3n en qu\u00E9 p\u00E1ginas hay que concentrar esfuerzos para mejorar los resultados del observatorio (aquellas con modalidad Falla o puntuaci\u00F3n cero). Una p\u00E1gina tendr\u00E1 Valor "0" y Modalidad "Pasa" cuando tenga alg\u00FAn problema menor de accesibilidad. Esto quiere decir que hay alg\u00FAn aspecto que corregir pero no es tan grave como para asignarle modalidad "Falla". Para mejorar la accesibilidad los primeros esfuerzos se deben dedicar a solucionar los problemas que originan modalidad "Falla".
+//resultados.primarios.5.p2 = Por lo tanto de forma r\u00E1pida y visual se puede ver para una determinada verificaci\u00F3n en qu\u00E9 p\u00E1ginas hay que concentrar esfuerzos para mejorar los resultados del observatorio (aquellas con modalidad Falla o puntuaci\u00F3n cero). Una p\u00E1gina tendr\u00E1 Valor "0" y Modalidad "Pasa" cuando tenga alg\u00FAn problema menor de accesibilidad. Esto quiere decir que hay alg\u00FAn aspecto que corregir pero no es tan grave como para asignarle modalidad "Falla". Para mejorar la accesibilidad los primeros esfuerzos se deben dedicar a solucionar los problemas que originan modalidad "Falla".
+resultados.primarios.5.p2 = Por lo tanto de forma r\u00E1pida y visual se puede ver en qu\u00E9 p\u00E1ginas hay que concentrar esfuerzos para mejorar los resultados del observatorio (aquellas con modalidad Falla o puntuaci\u00F3n cero). Una p\u00E1gina tendr\u00E1 Valor "0" y Modalidad "Pasa" cuando tenga alg\u00FAn problema menor de accesibilidad. Esto quiere decir que hay alg\u00FAn aspecto que corregir pero no es tan grave como para asignarle modalidad "Falla". Para mejorar la accesibilidad los primeros esfuerzos se deben dedicar a solucionar los problemas que originan modalidad "Falla".
 
 resultados.primarios.pagina = La PMP refleja la cantidad de requisitos de accesibilidad que se satisfacen correctamente. El nivel de adecuaci\u00F3n tiene en consideraci\u00F3n las prioridades de los requisitos, por lo que fallos en requisitos de Prioridad 1 originan p\u00E1ginas con nivel de adecuaci\u00F3n No V\u00E1lido. Siempre se deber\u00E1n solucionar primero los problemas relacionados con verificaciones de Prioridad 1 que hayan ocasionado una modalidad "Falla".
 
-resultados.primarios.errores.mas.info = Para obtener la informaci\u00F3n detallada de los errores detectados durante la ejecuci\u00F3n del observatorio puede utilizarse el "Servicio de Diagn\u00F3stico on-line" disponible para la "Comunidad Accesibilidad" del Centro de Transferencia de Tecnolog\u00EDa ([anchor1])
+resultados.primarios.errores.mas.info = Para obtener la informaci\u00F3n detallada de los errores detectados y su localizaci\u00F3n exacta en el c\u00F3digo debe utilizar el "Servicio de Diagn\u00F3stico en l\u00EDnea" que se encuentra disponible desde la "Comunidad Accesibilidad"\n([anchor1])
 
 resultados.anonimos.nivel.accesibilidad.global.title = 1. Distribuci\u00F3n del Nivel de Accesibilidad Global.
 resultados.anonimos.nivel.adecuacion.segmento.title = 2. Comparaci\u00F3n de Adecuaci\u00F3n por Segmento.
@@ -1616,7 +1617,7 @@ indice.rastreo.gestion.graficas.categorias = Gr\u00E1ficas por Categor\u00EDa
 
 back.to.fulfilled.crawlers.list = Listado de rastreos realizados
 
-pdf.accessibility.title = INFORME DE ACCESIBILIDAD WEB DE 
+pdf.accessibility.title = INFORME DE\nACCESIBILIDAD WEB\n{0}\n{1}
 pdf.accessibility.subtitle = Centro de Referencia en Accesibilidad y Est\u00E1ndares Web
 pdf.accessibility.index.title = \u00CDNDICE
 pdf.accessibility.index.global.summary = RESUMEN GLOBAL
@@ -1632,9 +1633,9 @@ pdf.accessibility.line = L\u00EDnea
 pdf.accessibility.column = Columna
 pdf.accessibility.code = C\u00F3digo
 pdf.accessibility.message = Mensaje
-pdf.accessibility.entity = Entidad\: 
-pdf.accessibility.domain = Dominio\: 
-pdf.accessibility.date = Fecha\: 
+pdf.accessibility.entity = Entidad\:
+pdf.accessibility.domain = Dominio\:
+pdf.accessibility.date = Fecha\:
 pdf.accessibility.foot.text = Centro de Referencia en Accesibilidad y Est\u00E1ndares Web
 pdf.accessibility.global.priority.incidence = Incidencias Por Prioridad Global
 pdf.accessibility.priority.incidence = Incidencias Por Prioridad
@@ -3144,7 +3145,7 @@ ob.resAnon.intav.report.chapter31.title = Muestra de Portales
 ob.resAnon.intav.report.chapter32.title = Muestra de P\u00E1ginas
 ob.resAnon.intav.report.chapter33.title = Lista de Verificaciones
 ob.resAnon.intav.report.chapter331.title = Correspondencia UNE 139803:2004 y WCAG 1.0
-une2012.resAnon.intav.report.chapter331.title = Correspondencia UNE 139803:2012 y WCAG 2.0
+une2012.resAnon.intav.report.chapter331.title = Correspondencia metodolog\u00EDa con UNE 139803:2012 y WCAG 2.0
 ob.resAnon.intav.report.chapter34.title = Resultados Obtenidos
 ob.resAnon.intav.report.chapter341.title = Puntuaci\u00F3n Media
 ob.resAnon.intav.report.chapter342.title = Nivel de Adecuaci\u00F3n
@@ -3232,7 +3233,7 @@ ob.resAnon.intav.report.1.p4 = El informe aqu\u00ED enviado corresponde a una pe
 ob.resAnon.intav.report.1.p5 = El presente Estudio de Observatorio analizar\u00E1 el estado en que se encuentran los sitios web de las Administraciones P\u00FAblicas de Espa\u00F1a en cuanto al cumplimiento de los requisitos de accesibilidad exigidos legalmente (prioridad 1 y 2 de UNE 139803:2004). El estudio se realizar\u00E1 sobre los portales pertenecientes a la Administraci\u00F3n General del Estado y una selecci\u00F3n de sitios web de las Comunidades Aut\u00F3nomas y Entidades Locales.
 
 	#Secci\u00F3n 1
-ob.resAnon.intav.report.11.p1 = La iniciativa del Observatorio de Accesibilidad Web se puso en marcha en el a\u00F1o 2010 prestando desde entonces diferentes servicios basados en el est\u00E1ndar UNE 139803:2004 (WCAG 1.0). Con la aprobaci\u00F3n del nuevo est\u00E1ndar 139803:2012 (WCAG 2.0) se iniciaron en 2013 diferentes actuaciones para promover la aplicaci\u00F3n de este nuevo est\u00E1ndar.
+ob.resAnon.intav.report.11.p1 = La iniciativa del Observatorio de Accesibilidad Web se puso en marcha en el a\u00F1o 2010 prestando desde entonces diferentes servicios basados en el est\u00E1ndar UNE 139803:2004 (WCAG 1.0). Con la aprobaci\u00F3n del nuevo est\u00E1ndar 139803:2012 (WCAG 2.0) los servicios del observatorio se han actualizado para promover la aplicaci\u00F3n de este nuevo est\u00E1ndar.
 ob.resAnon.intav.report.11.p4 = La Direcci\u00F3n de Tecnolog\u00EDas de la Informaci\u00F3n y las Comunicaciones, adscrita al {0} tiene entre sus funciones la promoci\u00F3n de la Administraci\u00F3n Digital mediante la realizaci\u00F3n de estudios y el dise\u00F1o y ejecuci\u00F3n t\u00E9cnica de programas de actuaci\u00F3n, la cooperaci\u00F3n con otras Administraciones p\u00FAblicas y el desarrollo y difusi\u00F3n de las herramientas y servicios comunes necesarios para ello.
 ob.resAnon.intav.report.11.p4.bold = Ministerio de Hacienda y Administraci\u00F3nes P\u00FAblicas a trav\u00E9s de la Secretar\u00EDa de Estado de Administraciones P\u00FAblicas
 ob.resAnon.intav.report.11.p5 = Asimismo le corresponde la evaluaci\u00F3n de las actuaciones realizadas y la elaboraci\u00F3n de las recomendaciones necesarias, todo ello en el marco de las directrices que se establezcan por la Comisi\u00F3n de Estrategia TIC y por el Comit\u00E9 Sectorial de Administraci\u00F3n Electr\u00F3nica, a los cuales prestar\u00E1 apoyo t\u00E9cnico.
@@ -4345,8 +4346,8 @@ chart.intav.bs.evolution.problem.rowTitle = N\u00FAmero de problemas
 chart.intav.bs.evolution.warning.rowTitle = N\u00FAmero de advertencias
 chart.intav.bs.evolution.cannottell.rowTitle = N\u00FAmero de observaciones
 
-priority1.bs = Incidencias Nivel de An\u00E1lisis 1
-priority2.bs = Incidencias Nivel de An\u00E1lisis 2
+priority1.bs = Incidencias Nivel de An\u00E1lisis I
+priority2.bs = Incidencias Nivel de An\u00E1lisis II
 first.level.bs = Prioridad 1
 second.level.bs = Prioridad 2
 first.level.incidents.bs = Incidencias de Prioridad 1
@@ -4544,3 +4545,5 @@ ob.resAnon.multilanguage.report.333.p10 = Gallego: 60% (el 60% de las palabras d
 ob.resAnon.multilanguage.report.333.p11 = Ingl\u00E9s: 20% (el 20% de las palabras de la p\u00E1gina aparecen en el diccionario ingl\u00E9s).
 ob.resAnon.multilanguage.report.333.p12 = Franc\u00E9s: 15% (el 15% de las palabras de la p\u00E1gina aparecen en el diccionario franc\u00E9s).
 ob.resAnon.multilanguage.report.333.p13 =se considerar\u00EDa que el texto de la p\u00E1gina est\u00E1 en espa\u00F1ol, es decir, "la mayor\u00EDa de la p\u00E1gina est\u00E1 en espa\u00F1ol".
+
+observatory.servicio.diagnostico.url = http://administracionelectronica.gob.es/comunidades/accesibilidad
