--- a/portal/profiles/desarrollo/crawler.properties
+++ b/portal/profiles/desarrollo/crawler.properties
@@ -22,6 +22,7 @@ date.complet.format = yyyy-MM-dd HH:mm:ss
 date.form.format = dd/MM/yyyy HH:mm
 date.format.simple = dd/MM/yyyy
 date.format.simple.pdf = dd/MM/yyyy
+date.format.evolution = dd/MM/yy
 file.date.format = yyyyMMddHHmm
 
 # Roles
@@ -148,8 +149,8 @@ chart.observatory.graphic.modality.colors = {38,187,8},{225,18,13}
 max.lenox.context = 10
 lenox.report.pagination = 20
 
-chart.observatory.graphic.x = 565
-chart.observatory.graphic.y = 454
+chart.observatory.graphic.x = 580
+chart.observatory.graphic.y = 458
 
 chart.pdf.graphic.x = 400
 chart.pdf.graphic.y = 300
