Report review updates

--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -3264,8 +3264,10 @@ une2012.resAnon.intav.report.3.p3=
 ob.resAnon.intav.report.3.p4 = Algunas de las comprobaciones unitarias de esta metodolog\u00EDa de observatorio se asemejan a otras incluidas en la metodolog\u00EDa europea de revisi\u00F3n de la accesibilidad UWEM, lo cual aporta m\u00E1s si cabe un plus de confiabilidad en los resultados obtenidos.
 ob.resAnon.intav.report.3.p5 = A continuaci\u00F3n se detallar\u00E1n y explicar\u00E1n convenientemente los aspectos m\u00E1s importantes de esta metodolog\u00EDa.
 
+ob.resAnon.intav.report.31.intro = El estudio se realiza en 3 \u00e1mbitos de actuaci\u00f3n totalmente diferenciados: el \u00e1mbito estatal, el \u00e1mbito regional y el \u00e1mbito local.
+
 	#Secci\u00F3n 3.1.EELL
-ob.resAnon.intav.report.31.p1.EELL = El estudio abarca la mayor\u00EDa de portales pertenecientes a la Administraci\u00F3n General del Estado y a los poderes del Estado (ejecutivo, legislativo y judicial), desde los sitios web de los Ministerios, hasta las sedes electr\u00F3nicas y portales de menor tama\u00F1o. Con el fin de obtener resultados comparables entre portales del mismo tipo, se ha llevado a cabo una categorizaci\u00F3n de los mismos en funci\u00F3n de su nivel de importancia dentro de la administraci\u00F3n, su tipo de contenido, o la finalidad para la que fueron creados. De esta forma se obtienen cinco grupos de portales:
+ob.resAnon.intav.report.31.p1.EELL = Por \u00faltimo, en el caso del \u00e1mbito local, el estudio abarca una selecci\u00f3n de portales de la Administraci\u00f3n Local de cada Provincia. Con el fin de obtener resultados comparables entre portales del mismo tipo en cada una de las Provincias, se ha llevado a cabo una categorizaci\u00f3n de los mismos en funci\u00f3n de las caracter\u00edsticas de la entidad local. En el caso del Observatorio de Entidades Locales, la muestra se ha dividido en cuatro grupos de portales, cada uno de los cuales contiene el mismo tipo de portal de cada Provincia:
 ob.resAnon.intav.report.31.p2.EELL = Segmento Diputaciones Provinciales. 
 ob.resAnon.intav.report.31.p3.EELL = {0} Portales de las diputaciones de las provincias y ciudades aut\u00F3nomas.
 ob.resAnon.intav.report.31.p4.EELL = Segmento Ayuntamiento de la capital. 
@@ -3276,7 +3278,7 @@ ob.resAnon.intav.report.31.p8.EELL = Segmento Municipios 3000-4000 habit.
 ob.resAnon.intav.report.31.p9.EELL = {0} Portales de municipios peque\u00F1os de la provincia, con una poblaci\u00F3n en torno a los 3000 \u00F3 4000 habitantes (seg\u00FAn datos demogr\u00E1ficos de 2009 del INE).
 
 	#Secci\u00F3n 3.1.AGE
-ob.resAnon.intav.report.31.p1.AGE = El estudio abarca la mayor\u00EDa de portales pertenecientes a la Administraci\u00F3n General del Estado y los poderes del Estado (ejecutivo, legislativo y judicial), desde los sitios web de los Ministerios, hasta las sedes electr\u00F3nicas y portales de menor tama\u00F1o. Con el fin de obtener resultados comparables entre portales del mismo tipo, se ha llevado a cabo una categorizaci\u00F3n de los mismos en funci\u00F3n de su nivel de importancia dentro de la administraci\u00F3n, su tipo de contenido, o la finalidad para la que fueron creados. De esta forma se obtienen cinco grupos de portales:
+ob.resAnon.intav.report.31.p1.AGE = En el caso del \u00e1mbito estatal, el estudio abarca la mayor\u00eda de portales pertenecientes a la Administraci\u00f3n General del Estado y a los poderes del Estado (ejecutivo, legislativo y judicial), desde los sitios web de los Ministerios, hasta las sedes electr\u00f3nicas y portales de menor tama\u00f1o. Con el fin de obtener resultados comparables entre portales del mismo tipo, se ha llevado a cabo una categorizaci\u00f3n de los mismos en funci\u00f3n de su nivel de importancia dentro de la administraci\u00f3n, su tipo de contenido, o la finalidad para la que fueron creados. De esta forma se obtienen cinco grupos de portales:
 ob.resAnon.intav.report.31.p2.AGE = Segmento Principales. 
 ob.resAnon.intav.report.31.p3.AGE = {0} Portales principales de Ministerios y Organismos P\u00FAblicos de mayor acceso.
 ob.resAnon.intav.report.31.p4.AGE = Segmento Organismos.
@@ -3284,12 +3286,12 @@ ob.resAnon.intav.report.31.p5.AGE = {0} Portales identificativos del resto de or
 ob.resAnon.intav.report.31.p6.AGE = Segmento Tem\u00E1ticos.
 ob.resAnon.intav.report.31.p7.AGE = {0} Portales gestionados por la Administraci\u00F3n pero que no identifican al organismo: webs promocionales, de informaci\u00F3n espec\u00EDfica sobre determinados aspectos, de servicios, recogida de datos, etc.
 ob.resAnon.intav.report.31.p8.AGE = Segmento Otros. 
-ob.resAnon.intav.report.31.p9.AGE = {0} Otros organismos del Estado.
+ob.resAnon.intav.report.31.p9.AGE = {0} Otros organismos del Estado y de la Administraci\u00F3n.
 ob.resAnon.intav.report.31.p10.AGE = Segmento Sedes. 
 ob.resAnon.intav.report.31.p11.AGE = {0} Sedes electr\u00F3nicas.
 
 	#Secci\u00F3n 3.1.CCAA
-ob.resAnon.intav.report.31.p1.CCAA = El estudio abarca un gran n\u00FAmero de portales de la Administraci\u00F3n Auton\u00F3mica, desde los sitios web principales de la Comunidad hasta los portales de Oficinas Virtuales, pasando por los portales de Salud, Empleo y otros. Con el fin de obtener resultados comparables entre portales del mismo tipo en cada una de las Comunidades, se ha llevado a cabo una categorizaci\u00F3n de los mismos en funci\u00F3n de su objetivo y  a finalidad para la que fueron creados. De esta forma se obtienen ocho grupos de portales, cada uno de los cuales contiene el mismo tipo de portal de cada Comunidad:
+ob.resAnon.intav.report.31.p1.CCAA = En el caso del \u00e1mbito regional, el estudio abarca un gran n\u00famero de portales de la Administraci\u00f3n Auton\u00f3mica, desde los sitios web principales de la Comunidad hasta los portales de sedes electr\u00f3nicas, pasando por los portales de Salud, Empleo y otros. De esta forma, para el Observatorio de las Comunidades Aut\u00f3nomas se obtienen ocho grupos de portales, cada uno de los cuales contiene el mismo tipo de portal de cada Comunidad:
 ob.resAnon.intav.report.31.p2.CCAA = Segmento Principales. 
 ob.resAnon.intav.report.31.p3.CCAA = {0} Portales principales de cada Comunidad Aut\u00F3noma.
 ob.resAnon.intav.report.31.p4.CCAA = Segmento Boletines.
