Adds external checks description files so any update could be done without code redeployment

--- a/portal/src/test/resources/propertiesmanager.properties
+++ b/portal/src/test/resources/propertiesmanager.properties
@@ -35,3 +35,5 @@ file.returnPaths=/returnPaths.properties
 
 key.role=role.properties
 file.role=/role.properties
+
+file.descriptions=/descriptions.test.properties
