--- a/portal/profiles/integracion/propertiesmanager.properties
+++ b/portal/profiles/integracion/propertiesmanager.properties
@@ -35,3 +35,5 @@ file.returnPaths=/returnPaths.properties
 
 key.role=role.properties
 file.role=/role.properties
+
+file.descriptions=file:///opt/usuarios/oaw/properties/descriptions.properties
