Fixes hibernate configuration file location property

--- a/portal/profiles/integracion/crawler.properties
+++ b/portal/profiles/integracion/crawler.properties
@@ -187,7 +187,7 @@ basic.service.title.max.length = 80
 basic.service.title.doc.max.length = 150
 basic.service.title.alternative = C\u00F3digo fuente
 
-hibernate.cfg.file.export.database = ${deploy.path}/WEB-INF/classes/export.database.hibernate.cfg.xml
+hibernate.cfg.file.export.database = export.database.hibernate.cfg.xml
 verification.id.reg.exp = (\\d\\.\\d\\.\\d)
 
 # Exportaci\u00F3n de anexos
