--- a/intavcore/pom.xml
+++ b/intavcore/pom.xml
@@ -41,12 +41,6 @@
         </dependency>
 
         <dependency>
-            <groupId>commons-logging</groupId>
-            <artifactId>commons-logging</artifactId>
-            <version>1.1.1</version>
-        </dependency>
-
-        <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
             <version>1.3</version>
@@ -106,6 +100,12 @@
             <groupId>com.helger</groupId>
             <artifactId>ph-css</artifactId>
             <version>3.9.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.5</version>
         </dependency>
 
         <!-- Dependencia que no se encuentra en los repositorios habituales, instalar local o subir a repositorio local -->
