--- a/oaw/pom.xml
+++ b/oaw/pom.xml
@@ -47,9 +47,9 @@
                     </configuration>
                 </plugin>
                 <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
+                    <groupId>org.sonarsource.scanner.maven</groupId>
                     <artifactId>sonar-maven-plugin</artifactId>
-                    <version>2.5</version>
+                    <version>3.0.1</version>
                 </plugin>
                 <plugin>
                     <groupId>org.jacoco</groupId>
