Another big refactoring focused on assuring db connections and other resources are properly closed

--- a/intavcore/src/test/resources/log4j.properties
+++ b/intavcore/src/test/resources/log4j.properties
@@ -1,4 +1,5 @@
 log4j.rootLogger=INFO, console
+log4j.logger.cz.vutbr.web.csskit = ERROR
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 
