Adds asynchronous web portal report generation

--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -848,6 +848,10 @@ modificar.observatorio.semillas.operaciones = Operaciones
 modificar.observatorio.pseudoaleatorio = Pseudoaleatorio
 modificar.observatorio.lenguaje = Lenguaje:
 
+generar.informes.observatorio.title = Generar informes PDFs del observatorio
+generar.informes.observatorio.tiempo_espera = El proceso de generaci\u00F3n de todos los informes durar\u00E1 aproximadamente {0} minutos.
+generar.informes.observatorio.aviso_correo = Se enviar\u00E1 un aviso al correo electr\u00F3nico {0} cuando finalice el proceso.
+
 gestion.semillas.observatorio = Gesti\u00F3n de Semillas del Observatorio
 gestion.semillas.observatorio.titulo = Gesti\u00F3n de Semillas del Observatorio
 semilla.observatorio.vacia = No hay semillas de Observatorio disponibles.
