Adds CSS extraction and saves it to BD for auditing

--- a/intavcore/src/test/resources/log4j.properties
+++ b/intavcore/src/test/resources/log4j.properties
@@ -1,5 +1,6 @@
 log4j.rootLogger=INFO, console
 log4j.logger.cz.vutbr.web.csskit = ERROR
+log4j.logger.cz.vutbr.web.domassign.DeclarationTransformer = ERROR
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 
