More code clean up

--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -192,7 +192,7 @@ errors.long={0} no es un valor v\u00E1lido.
 errors.float={0} no es un valor v\u00E1lido.
 errors.double={0} no es un valor v\u00E1lido.
 
-errors.date={0} no es una fecha.
+errors.date={0} no es una fecha en el formato esperado (dd/mm/aaaa).
 errors.range={0} no se encuentra en el rango {1} - {2}.
 errors.creditcard={0} es un n\u00FAmero de tarjeta de cr\u00E9dito incorrecto.
 errors.email={0} no es una direcci\u00F3n de correo v\u00E1lida.
